# libqalculate

./: .gitignore  README.md  meson.build  meson_options.txt
data/: meson.build
libqalculate/: QalculateNasc.cc  QalculateNasc.h  meson.build
