option('compile_definitions', type: 'feature', value: 'enabled', description: 'Compile definitions using gio')
option('libcurl', type: 'feature', value: 'enabled', description: 'Support for built-in retrieval of exchange rates]')
option('icu', type: 'feature', value: 'enabled', description: 'Support for case-insensitive unicode strings')